# Chirpy-Django

./: .coverage  .coveragerc  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
chirpy/: settings.py  test_settings.py  urls.py
social/: admin.py  forms.py  middlewares.py  models.py  urls.py  views.py
social/migrations/: 0001_initial.py  0002_comment_read.py  0003_rename_read_comment_seen.py
social/templates/social/: base.html  comments.html  feed.html  index.html  post.html
test/: test_models.py
test/social/: test_context_processors.py  test_forms.py  test_models.py  test_views.py
